# AucoDB

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  test.py
agent_template/: agent_template.json
aucodb/: __init__.py
aucodb/client/: auco_client.py
aucodb/database/: aucodb.py
aucodb/graph/: llm_graph_transformer.py  neo4j_client.py
aucodb/server/: auco_server.py
aucodb/vectordb/: factory.py
aucodb/vectordb/processor/: processor.py
docs/: my_graph.html
tests/: test_aucoclient.py  test_aucodb.py
